--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,6 +4,11 @@
     font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
+::selection {
+    color: white;
+    background-color: rebeccapurple;
+}
+
 header {
     display: flex;
     justify-content: space-between;
@@ -29,12 +34,14 @@ button {
     color: white;
 }
 
-main::after {
-    /* content: "Wrong! The answer was A"; */
+.ephemeral-message {
     border-top: 1px solid gray;
     margin-top: 10px;
     color: gray;
-    width: 100%;
+    max-width: 600px;
+    margin: 10px auto;
+    opacity: 1;
+    transition: opacity 0.5s linear;
 }
 
 form > * {
